# shreddr

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  shreddr.yaml.default
.github/: dependabot.yml
.github/workflows/: docker-image.yml  pullrequest.yml  rust.yml
docker/alpine/: Dockerfile  run.sh
src/: cli.rs  main.rs  watch.rs
src/index/: mod.rs
src/index/document_repository/: local_repository.rs  mod.rs
src/index/document_repository/local_repository/: migrations.rs  mod.rs
src/index/file_repository/: local_repository.rs  mod.rs
src/metadata/: file_extractor.rs  mod.rs  tag.rs
src/metadata/content/: mod.rs  ocr.rs
src/metadata/content/pdf/: extractor.rs  mod.rs  renderer.rs
src/server/: api.rs  assets.rs  documents.rs  mod.rs  pages.rs  tags.rs
web/assets/pages/: dashboard.css  dashboard.js  document.css  documents.css  documents.js  edit_tag.js  show_doc.js  shreddr.js  tags.js
web/pages/: documents.html  edit_tag.html  footer.html  header.html  index.html  show_document.html  tags.html
