[package]
name = "shreddr"
version = "0.1.6"
authors = ["Nico Schäfer <nschaefer@cs.uni-kl.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-log = "2.0"
simplelog = "0.9" # Logging
sha2 = "0.9"
notify = "4.0" # Watch directories
pdf-extract = { git = "https://github.com/N-Schaef/pdf-extract" } # Extract PDF text
tantivy = "0.12.0" # Full text search
futures = "0.3"
tokio = {version = "0.3", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
leptess = "0.9"
glob = "0.3.0"
thiserror = "1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# CLI
clap = "3.0.0-beta.2" #CLI arguments
shrust = "0.0" # Interactive cli
dialoguer = "0.7" # I/O
#indicatif = "0.15" #Progress bar
#Server
rocket = "0.4"
rust-embed="5.6"
rocket_contrib = "0.4"
string_template = "0.2"
rocket-multipart-form-data = "0.9"
tempfile = "3.2"
crossbeam-channel = "0.5"
# Meta Data extraction
commonregex = "0.2"
diligent-date-parser  = "0.1"
array_tool = "1.0"
whatlang = "0.11"

[dependencies.confy]
git = "https://github.com/rust-cli/confy"
features = ["yaml_conf"]
default-features = false
