[package]
name = "shreddr"
version = "0.2.3-dev"
authors = ["Nico Schäfer <nschaefer@cs.uni-kl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
async-log = "2.0.0"
simplelog = "0.11.0" # Logging
sha2 = "0.9.8"
notify = "4.0.17" # Watch directories
pdf-extract = { git = "https://github.com/jrmuizel/pdf-extract" } # Extract PDF text
tantivy = "0.14.0" # Full text search
futures = "0.1.29"
tokio = {version = "1.14.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
glob = "0.3.0"
thiserror = "1.0.30"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
# CLI
clap = "3.1.17" #CLI arguments
shrust = "0.0.7" # Interactive cli
dialoguer = "0.9.0" # I/O
#indicatif = "0.15" #Progress bar
#Server
rocket = "0.4.10"
rust-embed="6.3.0"
rocket_contrib = "0.4.10"
string_template = "0.2.1"
rocket-multipart-form-data = "0.9.6"
tempfile = "3.2.0"
crossbeam-channel = "0.5.1"
# Meta Data extraction
commonregex = "0.2.0"
diligent-date-parser  = "0.1.3"
array_tool = "1.0.3"
whatlang = "0.12.0"

[dependencies.confy]
git = "https://github.com/rust-cli/confy"
features = ["yaml_conf"]
default-features = false
